# invoice-processing-toolkit

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/invoice_processing_toolkit/: __init__.py  cli.py  core.py
tests/: test_core.py
