[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-processing-toolkit"
version = "0.1.0"
description = "OCR and LLM extraction with PO matching, approval routing, and exception flagging."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/invoice-processing-toolkit"
Issues = "https://github.com/erron-ai/invoice-processing-toolkit/issues"

[project.scripts]
invoice-processing-toolkit = "invoice_processing_toolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
